--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -27,7 +27,7 @@ block content
     div.parallax__img.parallax__img--six
     div.parallax__body
         div(itemscope itemtype="http://schema.org/Thing")
-            h3(itemprop="headline").gamma Inscrivez-vous pour le prochain Resto-Rallye
+            h3(itemprop="headline").gamma Inscrivez-vous pour ce Resto-Rallye
             p(itemprop="description")
                 | Désireux de nous rejoindre à notre prochain événement&nbsp;? Rien de plus simple, il suffit de remplir le formulaire ci-dessous. Dépèchez-vous&nbsp;! Il ne reste plus que
                 span.span--spacing.hightlight 30 places
@@ -88,7 +88,7 @@ block content
     div.parallax__img.parallax__img--seven
     div.parallax__body
         div(itemscope itemtype="http://schema.org/Thing")
-            h3(itemprop="headline").gamma Invitez vos amis au prochain Resto-Rallye
+            h3(itemprop="headline").gamma Invitez vos amis à ce Resto-Rallye
             p(itemprop="description")
                 | Vous pouvez aussi décider d'offrir des places pour le prochain événement à l'un de vos amis. Vous n'avez qu'à remplir ce formulaire, nous nous occuperons de lui envoyer l'invitation. Dépèchez-vous&nbsp;! Il ne reste plus que
                 span.span--spacing.hightlight 30 places
@@ -140,7 +140,7 @@ block content
                         label(for="msgInvitation").hightlight.label__text Votre message
                         textarea(id="msgInvitation" rows="10" placeholder="Nom des participants et/ou informations complémentaire").input__text
                     div.block.form__element--fullSize
-                        input(type="submit" value="Inviter vos amis !").input__submit
+                        input(type="submit" value="Invitez vos amis !").input__submit
                         label.hightlight.label__text
                             | Tous les champs munis d’un astérisque
                             span.span--spacing.asterisque (*)
