--- a/_mockUp/src/jade/includes/footer.jade
+++ b/_mockUp/src/jade/includes/footer.jade
@@ -46,7 +46,7 @@ div.parallax__body.myFooter
                 a(itemprop="url" href="#").block.social__link--rss Inscriver vous au flux RSS
         
         section(itemscope itemtype="http://schema.org/Action").inline-block.footer__newsletter
-            h5(itemprop="headline").delta NewsLetter
+            h5(itemprop="headline").delta Newsletter
             form#ancreError.forms__newsletter
                 input(itemprop="object" type="text" placeholder="votre@mail.com").input__text
                 input(itemprop="target" type="submit" value="S'inscrire").newsletter__submit
