--- a/_mockUp/src/styl/ITCSS/components/_components.articles.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.articles.styl
@@ -13,7 +13,7 @@
 // Style for articles
 .articles
     width 100%
-    rem-fallback( margin, 24px 0 )
+    rem-fallback( margin-bottom, 48px )
 
 .articles__img
     width 25%
