--- a/_mockUp/src/styl/ITCSS/components/_components.restaurant.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.restaurant.styl
@@ -24,3 +24,7 @@
     rem-fallback( padding, 0 16px )
 .restaurant__details--tel
     rem-fallback( margin, 8px 0 )
+
+.restaurant__gallery
+    rem-fallback( padding, 0 16px )
+    rem-fallback( margin-top, 24px )
