--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -21,8 +21,8 @@ wf_font-heading                 =    "RobotoHeading", sans-serif
 wf_font-quote                   =    "RochterQuote", sans-serif
 
 // Text colors.
-wf_labeur-color                 =    #7f8c8d
-wf_heading-color                =    #677171
+wf_labeur-color                 =    #5b6464
+wf_heading-color                =    #545d5d
 wf_nav-color                    =    #ffffff
 wf_link-color                   =    #3498db
 wf_link-color-hover             =    #90b4c5
