--- a/_mockUp/src/jade/contact.jade
+++ b/_mockUp/src/jade/contact.jade
@@ -49,7 +49,7 @@ block content
     div.parallax__img.parallax__img--twenty
     div.parallax__body
         div(itemscope itemtype="http://schema.org/Thing")
-            h3(itemprop="headline").gamma Accueillir nos gastronomades
+            h3(itemprop="headline").gamma Votre restaurant hôte d'un soir
             p(itemprop="description") Désireux de faire connaître votre restaurant, et par la même occasion faire découvrir votre carte à nos membres&nbsp;? Remplissez donc ce formulaire, il vous permettera de rentrer en contact avec l'un de nos organisateur et peut-être, vous serez à l'affiche du prochain Resto-Rallye&nbsp;!
                 div.inline-block.form__element
                     label(for="nomRestaurant").hightlight.label__text
