--- a/_mockUp/src/jade/restaurant.jade
+++ b/_mockUp/src/jade/restaurant.jade
@@ -5,6 +5,10 @@ extends includes/layout
 block title
     title Resto Rallye - Restaurant
 
+block style
+    link(rel="stylesheet" href="../css/main.css")
+    link(rel="stylesheet" href="../css/fresco/fresco.css")
+
 block header
     - var current = { second: 'html' }
     include includes/header.jade
@@ -27,6 +31,15 @@ block content
                 div(itemprop="telephone").block.restaurant__details--tel Tel&nbsp;:
                     span.span--spacing 0471 31 77 91
                 a(href="#" itemprop="url").block www.chezrené.be
+            div.restaurant__gallery
+                - var numberPhoto = 0
+                h4(itemprop="headline").delta Notre salle
+                
+                while numberPhoto < 5
+                    div.inline-block.gallery
+                        a(itemprop="url" href="../css/images/mockUp/exempleRest.jpg" data-fresco-group="unique_name").fresco.gallery__link
+                            img(itemprop="image" src="../css/images/mockUp/exempleRest.jpg").gallery__img
+                        - numberPhoto++
                 
     div.parallax__img.parallax__img--heighteen
 
