Good num and adresse

--- a/_mockUp/src/jade/includes/footer.jade
+++ b/_mockUp/src/jade/includes/footer.jade
@@ -33,10 +33,10 @@ div.parallax__body.myFooter
             h5(itemprop="headline").delta Nous contacter 
             p(itemprop="contactPoint")
                 span.block.hightlight Mail&nbsp;: 
-                a(itemprop="url" href="mailto adress@gmail.com") adress@gmail.com
+                a(itemprop="url" href="mailto: info@restorallye.com") info@restorallye.com
             p(itemprop="telephone")
                 span.block.hightlight Téléphone&nbsp;: 
-                | 0476 34 21 67                                            
+                | 0471 38 06 38                                           
     
         section(itemscope itemtype="http://schema.org/Action").inline-block.footer__information
             h5(itemprop="headline").delta Suivez-nous
