--- a/_mockUp/src/jade/includes/layout.jade
+++ b/_mockUp/src/jade/includes/layout.jade
@@ -3,22 +3,23 @@ doctype html
 <!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]><html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-head
-    meta(charset="utf-8")
-    meta(http-equiv="X-UA-Compatible" content="IE-edge")
-    block title
-        title Resto-Rallye
-    meta(name="description" content="")
-    meta(name="viewport" content="width-device-width, initial-scale=1")
-    link(rel="icon" type="image/png" href="")
-    block style
-        link(rel="stylesheet" href="../css/main.css")
+html
+    head
+        meta(charset="utf-8")
+        meta(http-equiv="X-UA-Compatible" content="IE-edge")
+        block title
+            title Resto-Rallye
+        meta(name="description" content="")
+        meta(name="viewport" content="width-device-width, initial-scale=1")
+        link(rel="icon" type="image/png" href="")
+        block style
+            link(rel="stylesheet" href="../css/main.css")
 
-body
-    block header
+    body
+        block header
 
-    block content
+        block content
 
-    block footer
+        block footer
 
-    block script
+        block script
