--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -14,7 +14,7 @@ block header
     include includes/header.jade
 
 block content
-    div(itemscope itemtype="http://schema.org/Thing").parallax__img.parallax__img--one
+    div(itemscope itemtype="http://schema.org/Thing").parallax__img.position--relative.parallax__img--one
         blockquote(itemprop="description").quote
             | Ne manquez pas notre prochain 
             a(itemprop="url" href="evenements.html").quote__link Rendez-vous 
