--- a/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
@@ -22,16 +22,16 @@
     position: absolute
     rem-fallback( width, 660px )
     rem-fallback( height, 40px )
-    rem-fallback( top, 32px )
-    right: 0
-    bottom: 0
-    left: 0
-    margin: auto
+    top 0
+    right 0
+    bottom 0
+    left 0
+    margin auto
     rem-fallback( font-size, 44px )
-    font-family: wf_font-quote
-    font-style: italic
-    color: wf_quote-color
-    text-align: center
+    font-family wf_font-quote
+    font-style italic
+    color wf_quote-color
+    text-align center
     text-shadows( 2px, 2px, 0, 0.6 )
 .quote__link
     text-shadows( 1.5px, 1.5px, 0, 0.6 )
