--- a/_mockUp/src/styl/ITCSS/objects/_objects.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/objects/_objects.parallax.styl
@@ -12,7 +12,7 @@
 
 // Parallax placements
 .parallax__img
-    position relative
+    position static
     min-height 80vh
     +media-query( screen, max-width 1920px )
         min-height 75vh
@@ -22,13 +22,6 @@
         min-height 50vh
     +media-query( screen, max-width 400px )
         min-height 35vh
-    &:before
-        content ""
-        position absolute
-        top 0
-        right 0
-        bottom 0
-        left 0
 
 .parallax__body
     rem-fallback( max-width, 1260px )
