--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -26,7 +26,6 @@
 // - Objects
 @import "ITCSS/objects/_objects.inline-block.styl"
 @import "ITCSS/objects/_objects.block.styl"
-@import "ITCSS/objects/_objects.position.styl"
 @import "ITCSS/objects/_objects.parallax.styl"
 
 // - Components
@@ -43,4 +42,5 @@
 @import "ITCSS/components/_components.pagination.styl"
 
 // - Trumps
+@import "ITCSS/trumps/_trumps.position.styl"
 @import "ITCSS/trumps/_trumps.hidden.styl"
