--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -428,7 +428,7 @@ h6:first-child,
 }
 @media screen and (max-width: 1280px) {
   .parallax__img {
-    min-height: 70vh;
+    min-height: 60vh;
   }
 }
 @media screen and (max-width: 800px) {
@@ -442,9 +442,27 @@ h6:first-child,
   }
 }
 .parallax__body {
-  max-width: 1260px;
-  max-width: 78.75rem;
+  max-width: 1200px;
+  max-width: 75rem;
   margin: 0 auto;
+}
+@media screen and (max-width: 1280px) {
+  .parallax__body {
+    max-width: 1080px;
+    max-width: 67.5rem;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__body {
+    max-width: 680px;
+    max-width: 42.5rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__body {
+    max-width: 360px;
+    max-width: 22.5rem;
+  }
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
