--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -17,7 +17,7 @@ block content
     div(itemscope itemtype="http://schema.org/Thing").parallax__img.position--relative.parallax__img--one
         blockquote(itemprop="description").quote
             | Ne manquez pas notre prochain
-            a(itemprop="url" href="evenements.html").quote__link Rendez-vous
+            a(itemprop="url" href="evenements.html").span--spacing.quote__link Rendez-vous
             | dans la région de Liège, à Seraing
     div(itemscope itemtype="http://schema.org/Thing").parallax__body.addText
         h3(itemprop="headline").gamma Bienvenue au Resto-Rallye
