--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -561,6 +561,12 @@ h6:first-child,
   margin-top: 0.5rem;
   z-index: 1;
 }
+@media screen and (max-width: 800px) {
+  .header__nav {
+    position: static;
+    margin: 0;
+  }
+}
 .nav {
   border-top: 2px solid #fbfbfb;
   border-bottom: 2px solid #fbfbfb;
@@ -575,6 +581,24 @@ h6:first-child,
   margin: 0 12px;
   margin: 0rem 0.75rem;
 }
+@media screen and (max-width: 800px) {
+  .nav__element {
+    display: block;
+    font-size: 22px;
+    font-size: 1.375rem;
+    padding: 6px 0;
+    padding: 0.375rem 0rem;
+    margin: 0;
+  }
+}
+.nav__element--accueil {
+  display: none;
+}
+@media screen and (max-width: 800px) {
+  .nav__element--accueil {
+    display: block;
+  }
+}
 .element__link {
   color: #fff;
   text-decoration: none;
@@ -585,10 +609,21 @@ h6:first-child,
   padding-bottom: 0.25rem;
   border-bottom: 1px solid #fff;
 }
+@media screen and (max-width: 800px) {
+  .element__link:hover {
+    padding-bottom: 2px;
+    padding-bottom: 0.125rem;
+  }
+}
 .banners {
   position: relative;
   width: 160px;
   width: 10rem;
+}
+@media screen and (max-width: 800px) {
+  .banners {
+    display: none;
+  }
 }
 .banners__link {
   position: absolute;
