--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -426,7 +426,7 @@ h6:first-child,
     min-height: 75vh;
   }
 }
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1080px) {
   .parallax__img {
     min-height: 60vh;
   }
@@ -442,26 +442,26 @@ h6:first-child,
   }
 }
 .parallax__body {
-  max-width: 1200px;
-  max-width: 75rem;
+  max-width: 1260px;
+  max-width: 78.75rem;
   margin: 0 auto;
 }
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1080px) {
   .parallax__body {
-    max-width: 1080px;
-    max-width: 67.5rem;
+    max-width: 1020px;
+    max-width: 63.75rem;
   }
 }
 @media screen and (max-width: 800px) {
   .parallax__body {
-    max-width: 680px;
-    max-width: 42.5rem;
+    max-width: 720px;
+    max-width: 45rem;
   }
 }
 @media screen and (max-width: 400px) {
   .parallax__body {
-    max-width: 360px;
-    max-width: 22.5rem;
+    max-width: 380px;
+    max-width: 23.75rem;
   }
 }
 /*
@@ -1131,9 +1131,35 @@ h6:first-child,
 .footer__information {
   width: 20%;
 }
+@media screen and (max-width: 1080px) {
+  .footer__information {
+    width: 50%;
+    margin-bottom: 32px;
+    margin-bottom: 2rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .footer__information {
+    width: 100%;
+    margin-bottom: 32px;
+    margin-bottom: 2rem;
+  }
+}
 .footer__newsletter {
   float: right;
   width: 25%;
+}
+@media screen and (max-width: 1080px) {
+  .footer__newsletter {
+    float: none;
+    width: 50%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .footer__newsletter {
+    float: none;
+    width: 100%;
+  }
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
