--- a/_mockUp/src/styl/ITCSS/components/_components.articles.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.articles.styl
@@ -17,10 +17,14 @@
 
 .articles__img
     width 25%
+    +media-query( screen, max-width 820px )
+        display none
 
 .articles__body
     width 75%
     rem-fallback( padding, 0 24px )
+    +media-query( screen, max-width 820px )
+        width 100%
 .body__dates
     font-style italic
     rem-fallback( margin-bottom, 8px )
