--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -28,10 +28,17 @@
 .forms__search
     position relative
     rem-fallback( width, 250px )
+
+    +media-query( screen, max-width 820px )
+        width 100%
+        rem-fallback( margin-bottom, 24px )
 .forms__search--right
     position absolute
     top 0
     right 0
+
+    +media-query( screen, max-width 820px )
+        position static
 .search__submit
     position absolute
     rem-fallback( width, 25px )
@@ -41,6 +48,9 @@
     rem-fallback( right, 8px )
     border none
     rem-fallback( text-indent, -1000000px )
+
+    +media-query( screen, max-width 820px )
+        rem-fallback( top, 68px )
     &:hover
         cursor pointer
 
@@ -51,6 +61,9 @@
     width 50%
     padding 0 2.5%
     rem-fallback( margin-bottom, 28px )
+
+    +media-query( screen, max-width 820px )
+        width 100%
 .form__element--fullSize
     width 100%
     padding 0 2.5%
@@ -77,6 +90,9 @@
     background wf_background-submit
     transition( all, 0.25s )
     cursor pointer
+
+    +media-query( screen, max-width 820px )
+        rem-fallback( font-size, 18px )
     &:hover
         background wf_background-submit-hover
 
