--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -12,7 +12,7 @@
 
 // Parallax style
 .parallax__body
-    padding: 2.5% 10%
+    padding: 5vh 10%
     background: wf_background-parallax
 
 // Parallax images
@@ -21,51 +21,51 @@
     background: url("images/parallax/2560x1707/backgroundImage.jpg") center fixed no-repeat
     +media-query( screen, max-width 1920px )
         background: url("images/parallax/1920x1080/backgroundImage.jpg") center fixed no-repeat
-    +media-query( screen, max-width 1280px )
+    +media-query( screen, max-width 1020px )
         background: url("images/parallax/1280x800/backgroundImage.jpg") center fixed no-repeat
-    +media-query( screen, max-width 800px )
+    +media-query( screen, max-width 820px )
         background: url("images/parallax/800x500/backgroundImage.jpg") center fixed no-repeat
-    +media-query( screen, max-width 400px )
+    +media-query( screen, max-width 490px )
         background: url("images/parallax/400x200/backgroundImage.jpg") center fixed no-repeat
 .parallax__img--two
     background: url("images/parallax/2560x1707/backgroundImage1.jpg") center fixed no-repeat
     +media-query( screen, max-width 1920px )
         background: url("images/parallax/1920x1080/backgroundImage1.jpg") center fixed no-repeat
-    +media-query( screen, max-width 1280px )
+    +media-query( screen, max-width 1020px )
         background: url("images/parallax/1280x800/backgroundImage1.jpg") center fixed no-repeat
-    +media-query( screen, max-width 800px )
+    +media-query( screen, max-width 820px )
         background: url("images/parallax/800x500/backgroundImage1.jpg") center fixed no-repeat
-    +media-query( screen, max-width 400px )
+    +media-query( screen, max-width 490px )
         background: url("images/parallax/400x200/backgroundImage1.jpg") center fixed no-repeat
 .parallax__img--three
     background: url("images/parallax/2560x1707/backgroundImage2.jpg") center fixed no-repeat
     +media-query( screen, max-width 1920px )
         background: url("images/parallax/1920x1080/backgroundImage2.jpg") center fixed no-repeat
-    +media-query( screen, max-width 1280px )
+    +media-query( screen, max-width 1020px )
         background: url("images/parallax/1280x800/backgroundImage2.jpg") center fixed no-repeat
-    +media-query( screen, max-width 800px )
+    +media-query( screen, max-width 820px )
         background: url("images/parallax/800x500/backgroundImage2.jpg") center fixed no-repeat
-    +media-query( screen, max-width 400px )
+    +media-query( screen, max-width 490px )
         background: url("images/parallax/400x200/backgroundImage2.jpg") center fixed no-repeat
 .parallax__img--four
     background: url("images/parallax/2560x1707/backgroundImage3.jpg") center fixed no-repeat
     +media-query( screen, max-width 1920px )
         background: url("images/parallax/1920x1080/backgroundImage3.jpg") center fixed no-repeat
-    +media-query( screen, max-width 1280px )
+    +media-query( screen, max-width 1020px )
         background: url("images/parallax/1280x800/backgroundImage3.jpg") center fixed no-repeat
-    +media-query( screen, max-width 800px )
+    +media-query( screen, max-width 820px )
         background: url("images/parallax/800x500/backgroundImage3.jpg") center fixed no-repeat
-    +media-query( screen, max-width 400px )
+    +media-query( screen, max-width 490px )
         background: url("images/parallax/400x200/backgroundImage3.jpg") center fixed no-repeat
 .parallax__img--five
     background: url("images/parallax/2560x1707/backgroundImage4.jpg") center fixed no-repeat
     +media-query( screen, max-width 1920px )
         background: url("images/parallax/1920x1080/backgroundImage4.jpg") center fixed no-repeat
-    +media-query( screen, max-width 1280px )
+    +media-query( screen, max-width 1020px )
         background: url("images/parallax/1280x800/backgroundImage4.jpg") center fixed no-repeat
-    +media-query( screen, max-width 800px )
+    +media-query( screen, max-width 820px )
         background: url("images/parallax/800x500/backgroundImage4.jpg") center fixed no-repeat
-    +media-query( screen, max-width 400px )
+    +media-query( screen, max-width 490px )
         background: url("images/parallax/400x200/backgroundImage4.jpg") center fixed no-repeat
 
 // - evenements.jade
@@ -73,41 +73,41 @@
     background: url("images/parallax/2560x1707/backgroundImage5.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage5.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage5.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage5.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage5.jpg") center fixed no-repeat
 .parallax__img--seven
     background: url("images/parallax/2560x1707/backgroundImage6.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage6.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage6.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage6.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage6.jpg") center fixed no-repeat
 .parallax__img--height
     background: url("images/parallax/2560x1707/backgroundImage7.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage7.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage7.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage7.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage7.jpg") center fixed no-repeat
 .parallax__img--nine
     background: url("images/parallax/2560x1707/backgroundImage8.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage8.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage8.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage8.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage8.jpg") center fixed no-repeat
 
 // - evenement.jade
@@ -115,31 +115,31 @@
     background: url("images/parallax/2560x1707/backgroundImage9.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage9.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage9.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage9.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage9.jpg") center fixed no-repeat
 .parallax__img--eleven
     background: url("images/parallax/2560x1707/backgroundImage10.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage10.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage10.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage10.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage10.jpg") center fixed no-repeat
 .parallax__img--twelve
     background: url("images/parallax/2560x1707/backgroundImage11.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage11.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage11.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage11.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage11.jpg") center fixed no-repeat
 
 // - Actualité
@@ -147,31 +147,31 @@
     background: url("images/parallax/2560x1707/backgroundImage12.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage12.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage12.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage12.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage12.jpg") center fixed no-repeat
 .parallax__img--fourteen
     background: url("images/parallax/2560x1707/backgroundImage13.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage13.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage13.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage13.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage13.jpg") center fixed no-repeat
 .parallax__img--fiveteen
     background: url("images/parallax/2560x1707/backgroundImage14.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage14.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage14.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage14.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage14.jpg") center fixed no-repeat
 
 // - Restaurants
@@ -179,21 +179,21 @@
     background: url("images/parallax/2560x1707/backgroundImage15.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage15.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage15.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage15.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage15.jpg") center fixed no-repeat
 .parallax__img--seventeen
     background: url("images/parallax/2560x1707/backgroundImage16.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage16.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage16.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage16.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage16.jpg") center fixed no-repeat
 
 // - Restaurant
@@ -201,11 +201,11 @@
     background: url("images/parallax/2560x1707/backgroundImage17.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage17.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage17.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage17.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage17.jpg") center fixed no-repeat
 
 // - Contact
@@ -213,29 +213,29 @@
     background: url("images/parallax/2560x1707/backgroundImage18.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage18.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage18.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage18.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage18.jpg") center fixed no-repeat
 .parallax__img--twenty
     background: url("images/parallax/2560x1707/backgroundImage19.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage19.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage19.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage19.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage19.jpg") center fixed no-repeat
 .parallax__img--twenty-one
     background: url("images/parallax/2560x1707/backgroundImage20.jpg") center fixed no-repeat
         +media-query( screen, max-width 1920px )
             background: url("images/parallax/1920x1080/backgroundImage20.jpg") center fixed no-repeat
-        +media-query( screen, max-width 1280px )
+        +media-query( screen, max-width 1020px )
             background: url("images/parallax/1280x800/backgroundImage20.jpg") center fixed no-repeat
-        +media-query( screen, max-width 800px )
+        +media-query( screen, max-width 820px )
             background: url("images/parallax/800x500/backgroundImage20.jpg") center fixed no-repeat
-        +media-query( screen, max-width 400px )
+        +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage20.jpg") center fixed no-repeat
