--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -499,6 +499,14 @@ h6:first-child,
   -ms-text-shadow: 2px 2px 2px rgba(0,0,0,0.6);
   text-shadow: 2px 2px 2px rgba(0,0,0,0.6);
 }
+@media screen and (max-width: 820px) {
+  .quote {
+    width: 440px;
+    width: 27.5rem;
+    font-size: 32px;
+    font-size: 2rem;
+  }
+}
 .quote__link {
   -webkit-text-shadow: 1.5px 1.5px 1.5px rgba(0,0,0,0.6);
   -moz-text-shadow: 1.5px 1.5px 1.5px rgba(0,0,0,0.6);
@@ -507,6 +515,13 @@ h6:first-child,
 }
 .programme {
   width: 50%;
+}
+@media screen and (max-width: 820px) {
+  .programme {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
 }
 .tarif {
   list-style-type: none;
